--- a/build
+++ b/build
@@ -1,2 +1,7 @@
 gcc -c -Wall -fpic openpkcs11.c
-gcc -shared -o openpkcs11.so openpkcs11.o
+
+# Linux
+gcc -shared -o openpkcs11.so openpkcs11.o -lcrypto
+
+# Windows Msys2
+# gcc -shared -o openpkcs11.dll openpkcs11.o -lcrypto -lws2_32 -lcrypt32
